[gd_scene load_steps=9 format=2]

[ext_resource path="res://ASSETS/UI/window.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/fonts/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/other/PauseScreen.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/sounds/pause.wav" type="AudioStream" id=4]
[ext_resource path="res://ASSETS/sounds/select.wav" type="AudioStream" id=5]
[ext_resource path="res://ASSETS/sounds/unpause.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[node name="PauseScreen" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 192.0
margin_top = 128.0
margin_right = 416.0
margin_bottom = 240.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 384.0
margin_top = 256.0
margin_right = 900.0
margin_bottom = 456.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Continuer" type="Label" parent="VBoxContainer"]
margin_right = 516.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "PAUSE_CONTINUE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recommencer" type="Label" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 516.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 1 )
text = "PAUSE_RESTART"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quitter" type="Label" parent="VBoxContainer"]
margin_top = 136.0
margin_right = 516.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "PAUSE_QUIT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer" type="Label" parent="."]
margin_left = 314.0
margin_top = 254.0
margin_right = 342.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 2 )
text = ">"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="UnpauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
